--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/src/assets/img/InstaShare.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Social Media</title>
+    <title>InstaShare</title>
   </head>
   <body>
     <div id="root"></div>
